Add docker_debug environment for local debugging
- Added docker_debug directory with Dockerfile, compose.yaml, default.env, and nginx configuration for local development and debugging.
- Updated .gitignore to include new environment and related files.
- Synchronized environment variables between docker/default.env and docker_debug/default.env for consistency.

--- a/docker_debug/compose.yaml
+++ b/docker_debug/compose.yaml
@@ -5,7 +5,7 @@ services:
     env_file: .env
     build:
       context: ..
-      dockerfile: docker/Dockerfile
+      dockerfile: docker_debug/Dockerfile
     volumes:
       - ..:/app
     environment:
@@ -17,6 +17,9 @@ services:
       - POSTGRES_DB=${DATABASE_DB}
     depends_on:
       - db
+    ports:
+      - "8011:8000"
+      - "5678:5678"  # debugpy
 
   nginx:
     env_file: .env
