--- a/.gitignore
+++ b/.gitignore
@@ -161,6 +161,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+# VSCode
+.vscode/
+
 *config.yml
 !default.config.yml
 .pg_service.conf
