Update environment configuration and README for Django frontend support
- Added ENABLE_DJANGO_FRONTEND and STATIC_ROOT variables to docker/default.env and docker_debug/default.env.
- Updated README.md to reflect new environment variables and their usage.
- Conditionally include 'front' app in INSTALLED_APPS based on ENABLE_DJANGO_FRONTEND setting in settings.py.

--- a/docker/default.env
+++ b/docker/default.env
@@ -9,3 +9,9 @@ DATABASE_USER=
 DATABASE_PASS=
 DATABASE_DB=
 DATABASE_MOUNTED_DUMPS_DIR=
+
+# Enable or disable Django frontend (front)
+ENABLE_DJANGO_FRONTEND=1
+
+# Absolute path for static files (if not set, defaults to /app/static)
+STATIC_ROOT=
