--- a/docker_debug/default.env
+++ b/docker_debug/default.env
@@ -9,3 +9,9 @@ DATABASE_USER=
 DATABASE_PASS=
 DATABASE_DB=
 DATABASE_MOUNTED_DUMPS_DIR=
+
+# Enable or disable Django frontend (front)
+ENABLE_DJANGO_FRONTEND=1
+
+# Absolute path for static files (if not set, defaults to /app/static)
+STATIC_ROOT=
