--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,13 +1,11 @@
 FROM python:3.11-slim
 
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-COPY requirements.txt .
+ADD --keep-git-dir=true https://github.com/nikluxomaklay/private_library.git .
 RUN pip install --no-cache-dir -r requirements.txt gunicorn
-
-COPY . .
 
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "private_library.wsgi"]
