--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,15 @@
-FROM python:3.11-slim
+FROM python:3.12-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-ADD --keep-git-dir=true https://github.com/nikluxomaklay/private_library.git .
+COPY ./requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt gunicorn
 
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "private_library.wsgi"]
+
+COPY --exclude=docker/  --exclude=docker_debug --exclude=.venv ../ .
+RUN chmod +x ./entrypoint.sh
+
+ENTRYPOINT ["/app/entrypoint.sh"]
